name:                rinerscivally
version:             0.1.0.0
synopsis:            The rinerscivally website generator
homepage:            http://rinerscivally.com
license:             MIT
license-file:        LICENSE
author:              Schell Scivally
maintainer:          efsubenovex@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable rinerscivally
  build-depends: milkshake
  default-language:    Haskell2010
